k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: web
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31686
  type: NodePort
